* update gpsd to 3.23.1-4

--- a/gpsd/PKGBUILD
+++ b/gpsd/PKGBUILD
@@ -7,9 +7,9 @@
 
 pkgname=gpsd
 pkgver=3.23.1
-pkgrel=1
+pkgrel=4
 pkgdesc="GPS daemon and library to support USB/serial GPS devices"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://catb.org/gpsd/"
 license=('BSD')
 depends=('python' 'libusb' 'bluez-libs' 'pps-tools')
@@ -57,8 +57,8 @@ package() {
 
   install -Dm755 gpsd.hotplug -t "${pkgdir}"/usr/lib/udev/
 
+  sed -e 's|/local||' -i packaging/X11/*.desktop
   install -Dm644 packaging/X11/*.desktop -t "${pkgdir}"/usr/share/applications/
-  install -Dm644 packaging/X11/gpsd-logo.png -t "${pkgdir}"/usr/share/gpsd/
 
   install -Dm644 gpsd-$pkgver/systemd/{gpsd.service,gpsd.socket,gpsdctl@.service} -t "${pkgdir}"/usr/lib/systemd/system/
 
