* update kdsoap to 2.0.0-1

--- a/kdsoap/PKGBUILD
+++ b/kdsoap/PKGBUILD
@@ -7,7 +7,8 @@ pkgver=2.0.0
 pkgrel=1
 pkgdesc='Qt-based client-side and server-side SOAP component'
 license=(GPL3 LGPL custom)
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url='https://github.com/KDAB/KDSoap'
 depends=(qt5-base)
 makedepends=(cmake)
