* update kio-fuse to 5.0.1-1

--- a/kde/kio-fuse/PKGBUILD
+++ b/kde/kio-fuse/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=kio-fuse
 pkgver=5.0.1
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc="FUSE interface for KIO"
 url="https://kde.org/"
 license=(GPL)
