* update colord to 1.4.6-1

--- a/colord/PKGBUILD
+++ b/colord/PKGBUILD
@@ -3,25 +3,25 @@
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 
 pkgbase=colord
-pkgname=(colord libcolord)
-pkgver=1.4.5
-pkgrel=4
+pkgname=(colord colord-sane libcolord)
+pkgver=1.4.6
+pkgrel=1
 pkgdesc="System daemon for managing color devices"
 url="https://www.freedesktop.org/software/colord"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2)
 depends=(lcms2 libgusb polkit sqlite dconf dbus libgudev shared-mime-info systemd)
-makedepends=(gobject-introspection vala bash-completion argyllcms git meson gtk-doc
+makedepends=(gobject-introspection vala sane bash-completion argyllcms git meson gtk-doc
              docbook-xsl)
 options=(!emptydirs)
-_commit=0563117371f82420616e5e40b6a75a0b34c697c7  # tags/1.4.5^0
+_commit=43c19fd019da5f69d2ebc00a9908b1dd83129485  # tags/1.4.6^0
 source=("git+https://github.com/hughsie/colord#commit=$_commit")
 sha256sums=('SKIP')
 validpgpkeys=('163EB50119225DB3DF8F49EA17ACBA8DFA970E17')  # Richard Hughes
 
 pkgver() {
   cd colord
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
@@ -31,7 +31,7 @@ prepare() {
 build() {
   arch-meson colord build \
     -D libcolordcompat=true \
-    -D sane=false \
+    -D sane=true \
     -D vapi=true \
     -D print_profiles=true \
     -D daemon_user=colord
@@ -66,8 +66,8 @@ package_colord() {
 
   cd "$pkgdir"
 
-  #_pick sane usr/lib/colord-sane
-  #_pick sane usr/lib/colord-plugins/libcolord_sensor_sane.so
+  _pick sane usr/lib/colord-sane
+  _pick sane usr/lib/colord-plugins/libcolord_sensor_sane.so
 
   _pick lib usr/include/colord-1/colord{,.h}
   _pick lib usr/lib/libcolord{,compat}.so*
