--- a/libmtp/PKGBUILD
+++ b/libmtp/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=libmtp
 pkgver=1.1.19
 pkgrel=1
 pkgdesc='Library implementation of the Media Transfer Protocol'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://libmtp.sourceforge.net'
 license=(LGPL)
 depends=(libusb)
