--- a/kde/kio-extras/PKGBUILD
+++ b/kde/kio-extras/PKGBUILD
@@ -4,10 +4,11 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kio-extras
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Additional components to increase the functionality of KIO'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url='https://www.kde.org/'
 license=(LGPL)
 depends=(kio kdnssd libssh smbclient libmtp phonon-qt5 syntax-highlighting kdsoap-ws-discovery-client libxcursor)
@@ -18,11 +19,12 @@ optdepends=('qt5-imageformats: thumbnails for additional image formats' 'perl: i
             'openexr: EXR format thumbnails' 'kactivities-stats: recently used kioslave')
 groups=(kde-applications kde-network)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('cc7d5465602c0cd26577a30572ebfa3141414828a360f17e6e456a2d6faa505f'
+sha256sums=('b1400209157f5ff21e0981a54c8bdb442a51764ccd88fecdd7e49f989bb4f787'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
