--- a/samba/PKGBUILD
+++ b/samba/PKGBUILD
@@ -11,8 +11,8 @@
 
 pkgbase=samba
 pkgname=('smbclient' 'samba')
-pkgver=4.15.3
-pkgrel=1
+pkgver=4.16.0
+pkgrel=4
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.samba.org"
 license=('GPL3')
@@ -20,18 +20,20 @@ makedepends=('python' 'python-markdown' 'python-dnspython' 'docbook-xsl' 'pkg-co
              'readline' 'tevent' 'acl' 'libldap' 'libcap' 'ldb' 'krb5' 'pam'
              'systemd' 'gnutls' 'talloc' 'tdb' 'dbus' 'libaio'
              'perl-parse-yapp' 'libnsl' 'libtirpc' 'rpcsvc-proto' 'jansson'
-             'liburing')
+             'liburing' 'perl-json' 'glusterfs')
 makedepends_powerpc64le=('ceph-libs')
 makedepends_x86_64=('ceph-libs')
 optdepends=(
              'python-dnspython: samba_dnsupdate and samba_upgradedns in AD setup'
+             'python-markdown: for samba-tool domain schemeupgrade'
+             'glusterfs: for vfs_glusterfs support'
 )
 source=(https://us1.samba.org/samba/ftp/stable/${pkgbase}-${pkgver}.tar{.gz,.asc}
         samba.logrotate
         samba.pam
         samba.conf)
 validpgpkeys=('81F5E2832BD2545A1897B713AA99442FB680B620') #Samba Distribution Verification Key <samba-bugs@samba.org>
-sha512sums=('5fcd8797f0ac2821f1bb213c9a39c0928847905f701003618f9f160eaa98f3fea25e3d8d4047658b0bd164f3e6a2a63fd7b0133317e536997c764acf7803950d'
+sha512sums=('cea6bab64021779d217669e58612d192b907c2c481ef30e40e449bc6b8f8993a9b7b7b5bfcfebe54d8f70b8f720893cfa77a9d674ef8e07dd45a55a0fbc673e2'
             'SKIP'
             '2ba0691ded467e4d6e40821f6de58c00f8962209efe2e60284c0c87756ab471c22c3d63b77d506e48c90ed0d852a2a24e41be1d499cf74a73cb99da0b503c858'
             '1e6183ab0eb812b3ef687ac2c26ce78f7cb30540f606d20023669ac00ba04075487fb72e4dc89cc05dab0269ff6aca98fc1167cc75669c225b88b592482fbf67'
@@ -86,8 +88,8 @@ build() {
 
 package_smbclient() {
 pkgdesc="Tools to access a server's filespace and printers via SMB"
-depends=('popt' 'tdb' 'ldb'
-         'tevent' 'libgcrypt' 'python' 'python-markdown' 'python-dnspython' 'talloc' 'readline' 'gnutls'
+depends=('popt' 'cifs-utils' 'tdb' 'ldb'
+         'tevent' 'libgcrypt' 'python' 'talloc' 'readline' 'gnutls'
          'libbsd' 'libldap' 'libcups' 'libarchive' 'libnsl' 'jansson'
          'libldb.so' 'libtdb.so' 'libtevent.so' 'libreadline.so' 'icu')
 replaces=('libwbclient')
@@ -149,9 +151,7 @@ package_samba() {
 pkgdesc="SMB Fileserver and AD Domain server"
 depends=('db>=4.7' 'popt' 'libcups' 'libcap>=2.16' 'gnutls>=2.4.1'
          'talloc' 'ldb' 'libbsd' 'python' 'iniparser' 'tdb' 'libaio' 'perl-parse-yapp' "smbclient>=$pkgver" 'gpgme'
-         'libldb.so' 'libtdb.so' 'libtevent.so' 'liburing')
-depends_powerpc64le=('ceph-libs')
-depends_x86_64=('ceph-libs')
+         'ceph-libs' 'libldb.so' 'libtdb.so' 'libtevent.so' 'liburing')
 backup=(etc/logrotate.d/samba
         etc/pam.d/samba
         etc/conf.d/samba)
@@ -202,12 +202,9 @@ sys.path.insert(0, '/usr/lib/python${_pyver}/site-packages')" \
 
   # Fix waf installing the wrong permissions for sudoers.d
   chmod 750 ${pkgdir}/etc/sudoers.d
-  chmod 600 ${pkgdir}/etc/sudoers.d/ctdb
+  chmod 440 ${pkgdir}/etc/sudoers.d/ctdb
+  # install ctdb service
+  install -D -m644 "${srcdir}"/samba-${pkgver}/ctdb/config/ctdb.service  ${pkgdir}/usr/lib/systemd/system/ctdb.service
 }
 
 # vim: ts=2 sw=2 et:
-sha512sums=('1c30cfa6cd927f4d822dd7227b89542d05d7ab4e50c2d9717eea4fcf1af5120b55d66ec628acd5c887e9bffc732c1d37ab084db953534a2b3987531b10fef63c'
-            'SKIP'
-            '2ba0691ded467e4d6e40821f6de58c00f8962209efe2e60284c0c87756ab471c22c3d63b77d506e48c90ed0d852a2a24e41be1d499cf74a73cb99da0b503c858'
-            '1e6183ab0eb812b3ef687ac2c26ce78f7cb30540f606d20023669ac00ba04075487fb72e4dc89cc05dab0269ff6aca98fc1167cc75669c225b88b592482fbf67'
-            'e46ee848baabb261e7468ecee43aba4d001a24f86f5322ae522abdb75030fd0ebd9063b9df0be3576c4d1654d81331f5e389aee16ec2fa138259ae4728e94efc')
