--- a/qpdf/PKGBUILD
+++ b/qpdf/PKGBUILD
@@ -4,52 +4,65 @@
 # Contributor: David Sotelo <dvsotelo at gmail.com>
 # Contributor: Nuno Araujo <nuno.araujo@russo79.com>
 
-pkgname=qpdf
-pkgver=10.5.0
+pkgbase=qpdf
+pkgname=('qpdf' 'qpdf-docs')
+pkgver=10.6.3
 pkgrel=1
 pkgdesc="QPDF: A Content-Preserving PDF Transformation System"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/qpdf/qpdf"
 license=('custom:Artistic-2.0' 'Apache')
-depends=('libjpeg-turbo' 'zlib' 'gnutls')
-makedepends=('texlive-bin' 'texlive-core' 'python-sphinx' 'python-sphinx_rtd_theme' 'texlive-latexextra')
+makedepends=('libjpeg-turbo' 'zlib' 'gnutls'
+             'texlive-bin' 'texlive-core' 'python-sphinx' 'python-sphinx_rtd_theme' 'texlive-latexextra')
 #optdepends=('perl:	required for fix-qdf')
 #checkdepends=('perl')
-# https://github.com/qpdf/qpdf/releases/download/release-qpdf-10.5.0/qpdf-10.5.0.sha256
-source=(#https://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz{,.asc})
-        https://github.com/qpdf/qpdf/releases/download/release-${pkgname}-${pkgver}/${pkgname}-${pkgver}.tar.gz{,.asc})
-sha256sums=('88257d36a44fd5c50b2879488324dd9cafc11686ae49d8c4922a4872203ce006'
+# https://github.com/qpdf/qpdf/releases/download/release-qpdf-10.6.3/qpdf-10.6.3.sha256
+source=(https://github.com/qpdf/qpdf/releases/download/release-${pkgname}-${pkgver}/${pkgname}-${pkgver}.tar.gz{,.asc})
+sha256sums=('e8fc23b2a584ea68c963a897515d3eb3129186741dd19d13c86d31fa33493811'
             'SKIP')
 validpgpkeys=('C2C96B10011FE009E6D1DF828A75D10998012C7E') # "Jay Berkenbilt <ejb@ql.org>"
 
+# howto build the docs:
+# https://github.com/qpdf/qpdf/blob/main/build-scripts/build-doc
+
 build() {
-  cd ${pkgname}-${pkgver}
+  cd ${pkgbase}-${pkgver}
   ./configure --prefix=/usr \
     --disable-static \
     --enable-crypto-gnutls \
     --disable-crypto-openssl \
     --disable-implicit-crypto \
     --enable-show-failed-test-output \
-    --enable-doc-maintenance --enable-html-doc
+    --enable-doc-maintenance
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
-  make
+  make doc-dist DOC_DEST=doc
 }
 
 check() {
-  cd ${pkgname}-${pkgver}
+  cd ${pkgbase}-${pkgver}
   make check # passes all
 }
 
-package() {
-  cd ${pkgname}-${pkgver}
-  make doc-dist DESTDIR="${pkgdir}/" DOC_DEST="${pkgdir}"/usr/share/doc/qpdf install
-  install -Dm644 doc/singlehtml/index.html "${pkgdir}"/usr/share/doc/qpdf/qpdf-manual.html
+package_qpdf() {
+  depends=('libjpeg-turbo' 'zlib' 'gnutls')
+
+  cd ${pkgbase}-${pkgver}
+  make DESTDIR="${pkgdir}/" install
 
   install -Dm644 completions/bash/qpdf "${pkgdir}/usr/share/bash-completion/completions/qpdf"
   install -Dm644 completions/zsh/_qpdf "${pkgdir}/usr/share/zsh/site-functions/_qpdf"
 
-  rm -rf "${pkgdir}"/usr/share/doc/qpdf/README-doc.txt
+  rm -rf "${pkgdir}"/usr/share/doc
 
-  mkdir -m755 -p "${pkgdir}"/usr/share/licenses/${pkgname}
-  install -m644 {Artistic-2.0,LICENSE.txt} "${pkgdir}"/usr/share/licenses/${pkgname}/
+  mkdir -m755 -p "${pkgdir}"/usr/share/licenses/${pkgbase}
+  install -m644 {Artistic-2.0,LICENSE.txt} "${pkgdir}"/usr/share/licenses/${pkgbase}/
+}
+
+package_qpdf-docs() {
+  pkgdesc+=" (documentation)"
+
+  cd ${pkgbase}-${pkgver}
+  mkdir -m755 -p "${pkgdir}"/usr/share/doc/qpdf
+  cp -a doc/singlehtml "${pkgdir}"/usr/share/doc/qpdf/
+  install -Dm644 doc/qpdf-manual.pdf "${pkgdir}"/usr/share/doc/qpdf/qpdf-manual.pdf
 }
