--- a/kde/kdeplasma-addons/PKGBUILD
+++ b/kde/kdeplasma-addons/PKGBUILD
@@ -4,25 +4,29 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdeplasma-addons
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='All kind of addons to improve your Plasma experience'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(plasma-workspace kunitconversion)
-makedepends=(extra-cmake-modules qt5-webengine)
+depends=(plasma-workspace kunitconversion purpose)
+makedepends=(extra-cmake-modules)
+makedepends_powerpc64le=(qt5-webengine)
+makedepends_x86_64=(qt5-webengine)
 optdepends=('purpose: Quickshare applet'
-            'quota-tools: disk quota applet'
-            'qt5-webengine: dictionary and webbrowser applets')
+            'quota-tools: disk quota applet')
+optdepends_powerpc64le=('qt5-webengine: dictionary and webbrowser applets')
+optdepends_x86_64=('qt5-webengine: dictionary and webbrowser applets')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('78da1e66da03aa8b34dfef2075655645e9bef1af59671080089bcf8c2d7a0033'
+sha256sums=('d721d32d16f34ef1066bdf2fcb781d5bc1aca7cf5cdf3a71c6fef2dfe668680d'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
