--- a/kde/kgamma5/PKGBUILD
+++ b/kde/kgamma5/PKGBUILD
@@ -2,22 +2,23 @@
 # Maintainer:Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kgamma5
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Adjust your monitor gamma settings'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(systemsettings)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f60730505b429a58401cf2350faafd3108514c9ad46dd7657a42af08c09e409e'
+sha256sums=('73ed9897b2281a8ddd7b47f063d548fa71b683662a63b5648ba590160bcf3f7c'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
