* update samba to 4.16.0-4.1

--- a/samba/PKGBUILD
+++ b/samba/PKGBUILD
@@ -12,7 +12,7 @@
 pkgbase=samba
 pkgname=('smbclient' 'samba')
 pkgver=4.16.0
-pkgrel=4
+pkgrel=4.1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.samba.org"
 license=('GPL3')
@@ -152,6 +152,8 @@ pkgdesc="SMB Fileserver and AD Domain server"
 depends=('db>=4.7' 'popt' 'libcups' 'libcap>=2.16' 'gnutls>=2.4.1'
          'talloc' 'ldb' 'libbsd' 'python' 'iniparser' 'tdb' 'libaio' 'perl-parse-yapp' "smbclient>=$pkgver" 'gpgme'
          'ceph-libs' 'libldb.so' 'libtdb.so' 'libtevent.so' 'liburing')
+depends_powerpc64le=('ceph-libs')
+depends_x86_64=('ceph-libs')
 backup=(etc/logrotate.d/samba
         etc/pam.d/samba
         etc/conf.d/samba)
