* update wayland-utils to 1.0.0-2

--- a/wayland-utils/PKGBUILD
+++ b/wayland-utils/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.0.0
 pkgrel=2
 pkgdesc='Wayland tools to display information about current compositor'
 url='https://gitlab.freedesktop.org/wayland/wayland-utils'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(MIT)
 depends=(wayland)
 makedepends=(meson wayland-protocols)
