--- a/kde/kinfocenter/PKGBUILD
+++ b/kde/kinfocenter/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kinfocenter
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='A utility that provides information about a computer system'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(systemsettings glu vulkan-tools wayland-utils procps-ng)
+depends=(systemsettings glu vulkan-tools wayland-utils xorg-xdpyinfo mesa-utils)
 makedepends=(extra-cmake-modules plasma-framework kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('67ae1e26b98a3efdeab6a0741bef9948410da6bee63692189535def0de98f138'
+sha256sums=('dc5b84964de4b68e45300477039c656d622a9546340e997eb8249de6a532b838'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
