--- a/kde/kscreen/PKGBUILD
+++ b/kde/kscreen/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kscreen
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='KDE screen management software'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(libkscreen plasma-framework qt5-sensors)
 makedepends=(extra-cmake-modules kcmutils)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d1032cfd442ee872db714522d8874a48050723ac22c47783c7478a11e47fb948'
+sha256sums=('3048edb7e1231b0d7a33b2e10a202e6fce34e34f47079fc87f8177d7aa871b6a'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
