--- a/libsoup3/PKGBUILD
+++ b/libsoup3/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libsoup3
-pkgver=3.0.4
-pkgrel=2
+pkgver=3.0.6
+pkgrel=1
 pkgdesc="HTTP client/server library for GNOME"
 url="https://wiki.gnome.org/Projects/libsoup"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -15,7 +15,8 @@ makedepends=(gobject-introspection python vala git gtk-doc meson samba
              python-quart)
 checkdepends=(apache php-apache)
 optdepends=('samba: Windows Domain SSO')
-_commit=25a728020c4b53b5db4c4c675070e92f947fbd4d  # tags/3.0.4^0
+options=(debug)
+_commit=5211c27a4c77c9bae511721cf20f0abac554d8b4  # tags/3.0.6^0
 source=("git+https://gitlab.gnome.org/GNOME/libsoup.git#commit=$_commit")
 sha256sums=('SKIP')
 
