--- a/kde/oxygen/PKGBUILD
+++ b/kde/oxygen/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=oxygen
 pkgdesc='KDE Oxygen style'
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(frameworkintegration kdecoration kwayland hicolor-icon-theme)
@@ -15,12 +15,13 @@ makedepends=(extra-cmake-modules kdoctools kcmutils)
 optdepends=('kcmutils: for oxygen-settings5')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0c6ccf96edff50088323c83fc50bbc7c04ec7a5d64f398456f09634ab14f7eef'
+sha256sums=('804d033afab3f16319d92a8e5dacfb2a5797f8661a64029ee9e9b3c0b0f87ab4'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgbase-$pkgver \
