--- a/kde/plasma-browser-integration/PKGBUILD
+++ b/kde/plasma-browser-integration/PKGBUILD
@@ -2,22 +2,23 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=plasma-browser-integration
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Components necessary to integrate browsers into the Plasma Desktop'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(GPL)
 depends=(purpose kfilemetadata plasma-workspace)
 makedepends=(extra-cmake-modules)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d74b043256d4eaf6c3b44507959eb28761e417ecd2fb7cc98b34aec77294894b'
+sha256sums=('677af76b6f7072312d63bd8230af6e6920d7b69942ad69cdf0a29356ce695bc1'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() { 
   cmake -B build -S $pkgname-$pkgver \
