--- a/xdg-user-dirs/PKGBUILD
+++ b/xdg-user-dirs/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xdg-user-dirs
 pkgver=0.17
 pkgrel=3
 pkgdesc="Manage user directories like ~/Desktop and ~/Music"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/xdg-user-dirs"
 license=(GPL)
 depends=(sh systemd)
