--- a/scim/PKGBUILD
+++ b/scim/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=3
 pkgdesc='Input method user interface and development platform'
 url='https://github.com/scim-im/scim'
 license=('LGPL')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('libltdl' 'gtk2')
 optdepends=('gtk3: gtk3 immodule')
 makedepends=('intltool' 'gtk3')
