--- a/kde/plasma-desktop/PKGBUILD
+++ b/kde/plasma-desktop/PKGBUILD
@@ -4,14 +4,14 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=plasma-desktop
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='KDE Plasma Desktop'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-depends=(gawk kdelibs4support polkit-kde-agent kmenuedit systemsettings baloo accountsservice xdg-user-dirs libxkbfile)
+depends=(gawk kdelibs4support polkit-kde-agent kmenuedit systemsettings baloo xdg-user-dirs libxkbfile)
 optdepends=('plasma-nm: Network manager applet'
             'powerdevil: power management, suspend and hibernate support'
             'kscreen: screen management'
@@ -19,16 +19,16 @@ optdepends=('plasma-nm: Network manager applet'
             'scim: kimpanel SCIM support'
             'kaccounts-integration: OpenDesktop integration plugin'
             'packagekit-qt5: to install new krunner plugins')
-replaces=(user-manager knetattach)
 makedepends=(extra-cmake-modules kdoctools xf86-input-evdev xf86-input-synaptics xf86-input-libinput xorg-server-devel
              scim kdesignerplugin kaccounts-integration intltool packagekit-qt5 kinit)
 groups=(plasma)
-sha256sums=('b3905877a32dbe36b923d8624b9d7ac0174071f7ec08bf057f3e94c1b566a87a'
+sha256sums=('b0e23046300e49acf93d9181d0c8dda2008a9a843a441af2528a91abc5c7d025'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
