* update qca to 2.3.4-1

--- a/qca/PKGBUILD
+++ b/qca/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=(qca-qt5 qca-qt6)
 pkgver=2.3.4
 pkgrel=1
 pkgdesc='Qt Cryptographic Architecture'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://userbase.kde.org/QCA'
 license=(LGPL)
 optdepends=('pkcs11-helper: PKCS-11 plugin' 'botan: botan plugin')
