--- a/kde/plasma-sdk/PKGBUILD
+++ b/kde/plasma-sdk/PKGBUILD
@@ -2,22 +2,23 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=plasma-sdk
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Applications useful for Plasma development'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(plasma-framework perl)
 makedepends=(extra-cmake-modules kdoctools ktexteditor)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('52d432377bb293ee264c7f521689b74111cd6e548a5e0938d0f346fc680214e8'
+sha256sums=('ecf35743a28c350aada480248bbc138b726315e53f36bb39afe5fba0d27d6ffe'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
