--- a/kde/powerdevil/PKGBUILD
+++ b/kde/powerdevil/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=powerdevil
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Manages the power consumption settings of a Plasma Shell'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(plasma-workspace bluez-qt networkmanager-qt)
@@ -15,12 +15,13 @@ makedepends=(extra-cmake-modules kdoctools)
 optdepends=('kinfocenter: for the Energy Information KCM' 'power-profiles-daemon: power profiles support')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('268420b48f683815457d61a11f9a565e7f176692a19c64997376cbc149c3b2d3'
+sha256sums=('ef70c00e36d4ddbaedeb0efeba68523289e6e112b12951460c8d36075de9546a'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
