--- a/kde/sddm-kcm/PKGBUILD
+++ b/kde/sddm-kcm/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=sddm-kcm
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='KDE Config Module for SDDM'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(GPL)
 depends=(sddm knewstuff systemsettings)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('bb338657463878b535f73eec6fc32c1f83f0928aeb7e61f66f497044eb0b5233'
+sha256sums=('bef347b9e066a756d71263b19552fbbf9b8a1d6d22861060bdfd1ead5ab9d85d'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
