* upgrade Plasma to 5.24.4 and add to riscv64

--- a/kde/kdegraphics-mobipocket/PKGBUILD
+++ b/kde/kdegraphics-mobipocket/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=21.12.1
 pkgrel=1
 pkgdesc='A collection of plugins to handle mobipocket files'
 url='https://apps.kde.org/es/kdegraphics_mobipocket/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 depends=(kio)
 makedepends=(extra-cmake-modules)
