--- a/kde/bluedevil/PKGBUILD
+++ b/kde/bluedevil/PKGBUILD
@@ -4,11 +4,12 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=bluedevil
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 epoch=1
 pkgdesc='Integrate the Bluetooth technology within KDE workspace and applications'
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(GPL2)
 depends=(bluez-qt kdeclarative)
@@ -16,12 +17,13 @@ makedepends=(extra-cmake-modules plasma-framework)
 optdepends=('pulseaudio-bluetooth: to connect to A2DP profile')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('dbb029a6f47b7b7038ede8d0b491b83d54cdb5438784ef9f7f16eba89aab76d9'
+sha256sums=('83778e9cd952c6efeb786395d3fb9f5d4e6aa65d2ef2bc02ad7d256a3201f0d6'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
