--- a/kde/polkit-kde-agent/PKGBUILD
+++ b/kde/polkit-kde-agent/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=polkit-kde-agent
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Daemon providing a polkit authentication UI for KDE'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(kiconthemes kdbusaddons kcrash)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-1-$pkgver.tar.xz{,.sig})
-sha256sums=('967e69d1e9246dac1cd2c6f0f38565d954cf5d298170af9a330a1f94f07af7f1'
+sha256sums=('955246c593d0332bfbe386e81aaf7714e9ac8b8e7743c8c2e4f334b28dd685ad'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-1-$pkgver \
