--- a/kde/xdg-desktop-portal/PKGBUILD
+++ b/kde/xdg-desktop-portal/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Patrick Griffis <tingping@tingping.se>
 
 pkgname=xdg-desktop-portal
-pkgver=1.10.1
+pkgver=1.14.1
 pkgrel=1
 pkgdesc="Desktop integration portals for sandboxed apps"
 url="https://github.com/flatpak/xdg-desktop-portal"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 license=(LGPL)
-depends=(glib2 pipewire fuse2 geoclue2)
+depends=(glib2 pipewire fuse3 geoclue2 rtkit systemd)
 makedepends=(python xmlto docbook-xsl git flatpak libportal)
-checkdepends=(epiphany gedit gvfs)
-_commit=7dccf42892fdfcc9c3542cad3afdf45351edb63e  # tags/1.10.1^0
+options=(debug)
+_commit=6e9ab0bfdc82043b4b27b5e4f77da982ac010587  # tags/1.14.1
 source=("git+https://github.com/flatpak/xdg-desktop-portal#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd $pkgname
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
@@ -31,11 +32,6 @@ build() {
   cd $pkgname
   ./configure --prefix=/usr --libexecdir=/usr/lib
   make 
-}
-
-check() {
-  cd $pkgname
-  make check
 }
 
 package() {
