* add libmusicbrainz5 to riscv64

--- a/libmusicbrainz5/PKGBUILD
+++ b/libmusicbrainz5/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libmusicbrainz5
 pkgver=5.1.0
 pkgrel=4
 pkgdesc="Library That Provides Access to the MusicBrainz Server"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://musicbrainz.org/doc/libmusicbrainz'
 license=('LGPL2.1')
 depends=('neon' 'libxml2')
