--- a/kde/libkcddb/PKGBUILD
+++ b/kde/libkcddb/PKGBUILD
@@ -4,20 +4,21 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libkcddb
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='KDE CDDB library'
 url='https://www.kde.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 depends=(kio libmusicbrainz5)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('4b2acd5a945de27e81e518e9613641e1244149a6c2413c906cddebd70891460a'
+sha256sums=('62709f9ccd8463208b905a3b935be1ba80102c451728e9f5c77e83eaf4afc191'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
