* fix distcc pump with python 3.10

--- a/distcc/PKGBUILD
+++ b/distcc/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=distcc
 pkgver=3.4
-pkgrel=4.1
+pkgrel=4.2
 _gccver=11.2.0 # Current GCC version, used for symlinks. See FS#69044
 pkgdesc='Distributed compilation service for C, C++ and Objective-C'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -37,7 +37,7 @@ prepare() {
 
 build() {
   cd $pkgname
-  export CFLAGS+=' -fcommon'
+  export CFLAGS+=' -fcommon -DPY_SSIZE_T_CLEAN=1'
   ./configure \
     --enable-rfc2553 \
     --mandir=/usr/share/man \
