* update grantlee to 5.2.0-3

--- a/grantlee/PKGBUILD
+++ b/grantlee/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=grantlee
 pkgver=5.2.0
 pkgrel=3
 pkgdesc="A string template engine based on the Django template system and written in Qt5"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/steveire/grantlee"
 license=(LGPL2.1)
 depends=(qt5-declarative)
