* update gpgme to 1.17.1-1.1

--- a/gpgme/PKGBUILD
+++ b/gpgme/PKGBUILD
@@ -6,7 +6,7 @@
 pkgbase=gpgme
 pkgname=(gpgme qgpgme python-gpgme)
 pkgver=1.17.1
-pkgrel=1
+pkgrel=1.1
 _python_ver=3.10
 pkgdesc='A C wrapper library for GnuPG'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -21,12 +21,12 @@ source=("https://www.gnupg.org/ftp/gcrypt/${pkgbase}/${pkgbase}-${pkgver}.tar.bz
 sha256sums=('711eabf5dd661b9b04be9edc9ace2a7bc031f6bd9d37a768d02d0efdef108f5f'
             'SKIP'
             '5de2f6bcb6b30642d0cbc3fbd86803c9460d732f44a526f44cedee8bb78d291a'
-            '4890c50c94dc05bc054eef7ddba02a9ef2162c32b575d044ede127ada621b826')
+            'f078d94086bfe50bd7b5640dbbd63e19b28b2d9f48d78f7c0156d8d8d9f2c163')
 
 prepare() {
   cd ${pkgbase}-${pkgver}
   patch -Np1 -i ../python310.patch
-  patch -Np1 -i ../include-config.patch
+  #patch -Np0 -i ../include-config.patch
 }
 
 build() {
@@ -34,7 +34,7 @@ build() {
 
   _pyarch=${CARCH}
   case "${CARCH}" in
-    powerpc)     _pyarch=ppc ;;
+    powerpc)     _pyarch=ppc; export CFLAGS+=" -D_FILE_OFFSET_BITS=64" ;;
     powerpc64le) _pyarch=ppc64le ;;
   esac
 
