* update qtkeychain to 0.13.2-1

--- a/qtkeychain/PKGBUILD
+++ b/qtkeychain/PKGBUILD
@@ -6,32 +6,33 @@
 pkgbase=qtkeychain
 pkgname=(qtkeychain-qt5)
 [ "${CARCH}" != 'powerpc' ] && pkgname+=(qtkeychain-qt6)
-pkgver=0.12.0
+pkgver=0.13.2
 pkgrel=1
 pkgdesc='Provides support for secure credentials storage'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/frankosterfeld/qtkeychain'
 license=(BSD)
 depends=(libsecret)
 makedepends=(cmake qt5-tools)
 makedepends_powerpc64le=(qt6-tools)
+makedepends_riscv64=(qt6-tools)
 makedepends_x86_64=(qt6-tools)
-source=("$pkgname-$pkgver.tar.gz::https://github.com/frankosterfeld/qtkeychain/archive/v$pkgver.tar.gz")
-sha256sums=('cc547d58c1402f6724d3ff89e4ca83389d9e2bdcfd9ae3d695fcdffa50a625a8')
+source=(https://github.com/frankosterfeld/qtkeychain/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
+sha256sums=('20beeb32de7c4eb0af9039b21e18370faf847ac8697ab3045906076afbc4caa5')
 
 build() {
   cmake -B build-qt5 -S $pkgbase-$pkgver \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_INSTALL_LIBDIR=lib
+    -DCMAKE_INSTALL_PREFIX=/usr
   cmake --build build-qt5
 
-  if [ "${CARCH}" != 'powerpc' ]; then
-    cmake -B build-qt6 -S $pkgbase-$pkgver \
-      -DCMAKE_INSTALL_PREFIX=/usr \
-      -DCMAKE_INSTALL_LIBDIR=lib \
-      -DBUILD_WITH_QT6=ON
-    cmake --build build-qt6
-  fi
+  case "${CARCH}" in
+    powerpc64le|riscv64|x86_64)
+      cmake -B build-qt6 -S $pkgbase-$pkgver \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DBUILD_WITH_QT6=ON
+      cmake --build build-qt6
+    ;;
+  esac
 }
 
 package_qtkeychain-qt5() {
