* update cantor to 21.12.3-1

--- a/kde/cantor/PKGBUILD
+++ b/kde/cantor/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=cantor
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='KDE Frontend to Mathematical Software'
 url='https://apps.kde.org/cantor/'
@@ -18,14 +18,15 @@ optdepends=('maxima: Maxima backend'
             'r: R backend'
             'luajit: LUA backend'
             'python: Python backend'
-	    'sagemath: SageMath backend'
+            'sagemath: SageMath backend'
             'julia: Julia backend')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e1ed91e0488ea8483ed9ddc6ab88a8e486fddfe4cb8176831c652fc445a79b50'
+sha256sums=('7a4a89df0dc5c4b3d5870103c5183fd6dc7bf44338deca09014fe5f1d5631d6c'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
