* update minio to 2022.03.14-1

--- a/go/minio/PKGBUILD
+++ b/go/minio/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Daniel Maslowski <info@orangecms.org>
 
 pkgname=minio
-pkgver=2021.12.29
-_timever=T06:49:06Z
+pkgver=2022.03.14
+_timever=T18:25:24Z
 _pkgver="${pkgver//./-}${_timever//:/-}"
 pkgrel=1
 pkgdesc='Object storage server compatible with Amazon S3'
@@ -31,6 +31,9 @@ build() {
   export CGO_CPPFLAGS="${CPPFLAGS}"
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly -modcacherw"
+
+  mkdir -p ${srcdir}/tmp
+  export TMPDIR=${srcdir}/tmp
 
   cd minio
 
