* add go-bindata-assetfs to riscv64

--- a/go/go-bindata-assetfs/PKGBUILD
+++ b/go/go-bindata-assetfs/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=go-bindata-assetfs
 pkgver=1.0.1
 pkgrel=2
 pkgdesc="Serves embedded files from jteeuwen/go-bindata with net/http"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url="https://github.com/elazarl/go-bindata-assetfs"
 license=('BSD')
 depends=('glibc')
