* add go-bindata-hashicorp to riscv64

--- a/go/go-bindata-hashicorp/PKGBUILD
+++ b/go/go-bindata-hashicorp/PKGBUILD
@@ -9,7 +9,7 @@ _commit=bf7910af899725e4938903fb32048c7c0b15f12e
 pkgver=3.0.7+bf7910af
 pkgrel=4
 pkgdesc="A small utility which generates Go code from any file (Hashicorp version)"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url='https://github.com/hashicorp/go-bindata'
 license=('CC0 1.0')
 depends=('glibc')
