* update libburn to 1.5.4-1

--- a/libburn/PKGBUILD
+++ b/libburn/PKGBUILD
@@ -6,12 +6,12 @@ pkgname=libburn
 pkgver=1.5.4 # .pl01
 pkgrel=1
 pkgdesc="Library for reading, mastering and writing optical discs"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://dev.lovelyhq.com/libburnia"
 license=('GPL')
 depends=('glibc')
 # https://dev.lovelyhq.com/libburnia/web/wikis/Releases
-source=(http://files.libburnia-project.org/releases/${pkgname}-${pkgver}.tar.gz{,.sig})
+source=(https://files.libburnia-project.org/releases/${pkgname}-${pkgver}.tar.gz{,.sig})
 options=('!emptydirs')
 sha256sums=('525059d10759c5cb8148eebc863bb510e311c663603da7bd2d21c46b7cf63b54'
             'SKIP')
@@ -19,7 +19,7 @@ validpgpkeys=('44BC9FD0D688EB007C4DD029E9CBDFC0ABC0A854') # Thomas Schmitt <scdb
 
 build() {
   cd "${pkgname}"-${pkgver/.pl01/}
-  ./configure --prefix=/usr --disable-static
+  ./configure --prefix=/usr --disable-static --build=${CHOST}
   make
 }
 
