* update libmatroska to 1.6.3-2

--- a/libmatroska/PKGBUILD
+++ b/libmatroska/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=libmatroska
 pkgver=1.6.3
-pkgrel=1
+pkgrel=2
 pkgdesc='Matroska library'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url=https://github.com/Matroska-Org/libmatroska
 license=(LGPL2.1)
 depends=(libebml.so)
