* update projectm to 3.1.12-3

--- a/projectm/PKGBUILD
+++ b/projectm/PKGBUILD
@@ -9,8 +9,8 @@
 pkgbase=projectm
 pkgname=('projectm' 'projectm-sdl' 'projectm-pulseaudio')
 pkgver=3.1.12
-pkgrel=2
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=3
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/projectM-visualizer/projectm'
 license=('LGPL')
 makedepends=('mesa-libgl' 'glm' 'qt5-base' 'ftgl' 'glew' 'sdl2' 'libpulse')
@@ -19,7 +19,8 @@ sha256sums=('b6b99dde5c8f0822ae362606a0429628ee478f4ec943a156723841b742954707')
 
 build() {
     cd "projectM-$pkgver"
-    ./configure --prefix=/usr --enable-gles --enable-sdl --enable-threading --enable-qt
+    ./configure --prefix=/usr --enable-gles --enable-sdl --enable-threading --enable-qt \
+                --build=${CHOST}
     sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool # Fix overlinking
     make
 }
