* update libtar to 1.2.20-6

--- a/libtar/PKGBUILD
+++ b/libtar/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=1.2.20
 pkgrel=6
 _git='9c2e044833c5e908f5be0a77991b08849021793e'
 pkgdesc='C library for manipulating POSIX tar files'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://repo.or.cz/w/libtar.git'
 license=('BSD')
 depends=('zlib')
