* update aribb25 to 0.2.7-2

--- a/aribb25/PKGBUILD
+++ b/aribb25/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.2.7
 pkgrel=2
 pkgdesc='Library for ARIB STD-B25, decoding JIS 8 bit characters and parsing MPEG-TS stream'
 url='https://code.videolan.org/videolan/aribb25'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom:ISC')
 depends=('glibc' 'pcsclite')
 provides=('libaribb25.so')
