* update aribb24 to 1.0.3-3

--- a/aribb24/PKGBUILD
+++ b/aribb24/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.0.3
 pkgrel=3
 pkgdesc='Library for ARIB STD-B24, decoding JIS 8 bit characters and parsing MPEG-TS stream'
 url='https://github.com/nkoriyama/aribb24'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL3')
 depends=("libpng")
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/nkoriyama/aribb24/archive/v${pkgver}.tar.gz
