* update firewalld to 1.0.3-3

--- a/firewalld/PKGBUILD
+++ b/firewalld/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=firewalld
 pkgver=1.0.3
-pkgrel=2
+pkgrel=3
 pkgdesc='Firewall daemon with D-Bus interface'
 arch=(any)
 url=https://firewalld.org/
@@ -22,9 +22,8 @@ makedepends=(
   docbook-xsl
   git
   intltool
+  podman
 )
-makedepends_powerpc64le=(podman)
-makedepends_x86_64=(podman)
 optdepends=(
   'bash-completion: bash completion'
   'gtk3: firewall-config'
