* update libsoup to 2.74.2-2

--- a/libsoup/PKGBUILD
+++ b/libsoup/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.74.2
 pkgrel=2
 pkgdesc="HTTP client/server library for GNOME"
 url="https://wiki.gnome.org/Projects/libsoup"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(glib2 libxml2 glib-networking sqlite krb5 libpsl brotli
          libsysprof-capture)
