* update vde2 to 2.3.2-20

--- a/vde2/PKGBUILD
+++ b/vde2/PKGBUILD
@@ -1,13 +1,12 @@
-# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Contributor: Sergej Pupykin
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 pkgname=vde2
 pkgver=2.3.2
-pkgrel=18
+pkgrel=20
 pkgdesc="Virtual Distributed Ethernet for emulators like qemu"
-url="https://sourceforge.net/projects/vde/"
+url="https://github.com/virtualsquare/vde-2"
 license=("GPL" "LGPL" "CUSTOM")
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('bash' 'libpcap' 'openssl')
 makedepends=('python')
 source=(https://downloads.sourceforge.net/vde/$pkgname-$pkgver.tar.bz2
@@ -15,7 +14,8 @@ source=(https://downloads.sourceforge.net/vde/$pkgname-$pkgver.tar.bz2
         dhcpd.conf.sample
         iptables.rules.sample
         vde-config.sample
-        vde-connection.sample)
+        vde-connection.sample
+        format-security.patch)
 install=vde2.install
 options=(!makeflags)
 sha256sums=('cbea9b7e03097f87a6b5e98b07890d2275848f1fe4b9fcda77b8994148bc9542'
@@ -23,11 +23,14 @@ sha256sums=('cbea9b7e03097f87a6b5e98b07890d2275848f1fe4b9fcda77b8994148bc9542'
             'da0e2766dc63069da929c28126831ad5fdddcc4a04105a21217d78832c7ca1bc'
             '99076d7466cd99673dbe91ef83865187e7868177959b38e125df63eea957f83e'
             '5727c215646333c37b26388146cd3e6b3814b88d60d54051d7da99e00c0aef87'
-            '5139110ed6d5d1174bf12971512dac5196d9d07df46dd393d7b1cd083118fe9b')
+            '5139110ed6d5d1174bf12971512dac5196d9d07df46dd393d7b1cd083118fe9b'
+            'a3207c93c4be4848e09a0b8618dcdc4e9d88a99153e95d3fcdd690efa6237a79')
 
 prepare() {
   cd $pkgname-$pkgver
   patch -Np1 -i ../vde_cryptcab-compile-against-openssl-1.1.0.patch
+# Fix format-security build errors
+  patch -p2 -i ../format-security.patch
 }
 
 build() {
