* add cairomm to riscv64

--- a/cairomm/PKGBUILD
+++ b/cairomm/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=1.14.3
 pkgrel=2
 pkgdesc="C++ bindings for Cairo"
 url="https://www.cairographics.org/cairomm/"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL MPL)
 depends=(cairo libsigc++)
 makedepends=(git meson mm-common)
