* update llvm to 13.0.1-2

--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=('llvm' 'llvm-libs' 'llvm-ocaml')
 pkgver=13.0.1
-pkgrel=1
+pkgrel=2
 _ocaml_ver=4.13.1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://llvm.org/"
@@ -19,6 +19,7 @@ source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
         don-t-accept-nullptr-as-GEP-element-type.patch
         no-strict-aliasing-DwarfCompileUnit.patch
         disable-bswap-for-spir.patch
+        don-t-move-DBG_VALUE-instructions.patch
         llvm-config.h
         build-any.patch
         riscv-generic.patch)
@@ -27,6 +28,7 @@ sha256sums=('ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
             'a7e902a7612d0fdabe436a917468b043cc296bc89d8954bfc3126f737beb9ac4'
             'd1eff24508e35aae6c26a943dbaa3ef5acb60a145b008fd1ef9ac6f6c4faa662'
             'af163392fbc19d65d11ab4b1510a2eae39b417d6228023b3ba5395b138bb41f5'
+            'f7d69f84241416398fdb3df8bb44f9fae3c49d89889c7ffa3b37aa2e9d78f708'
             '597dc5968c695bbdbb0eac9e8eb5117fcd2773bc91edf5ec103ecffffab8bc48'
             'fa49cb1e9107d8d151a419d3c09f231f9fa42b8ea77a87de0392b44a7ea0076e'
             '5c53e41a4011e7c65c43ed3871c09b544df9f73e35d09914d4463b2f9103b84e')
@@ -43,6 +45,10 @@ prepare() {
   # Work around intermittent 'clang -O -g' crashes
   # https://bugs.llvm.org/show_bug.cgi?id=50611#c3
   patch -Np2 -i ../no-strict-aliasing-DwarfCompileUnit.patch
+
+  # https://github.com/llvm/llvm-project/issues/53243
+  # https://github.com/rust-lang/rust/issues/92869
+  patch -Np2 -i ../don-t-move-DBG_VALUE-instructions.patch
 
   # Fix an ISPC build failure (https://github.com/ispc/ispc/issues/2189)
   patch -Np2 -i ../disable-bswap-for-spir.patch
