* add vamp-plugin-sdk to riscv64

--- a/vamp-plugin-sdk/PKGBUILD
+++ b/vamp-plugin-sdk/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=vamp-plugin-sdk
 pkgver=2.10.0
 pkgrel=2
 pkgdesc="The Vamp audio analysis plug-in system"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.vamp-plugins.org/"
 license=('BSD')
 groups=('pro-audio')
