* add sox to riscv64

--- a/sox/PKGBUILD
+++ b/sox/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=sox
 pkgver=14.4.2
 pkgrel=7
 pkgdesc="The Swiss Army knife of sound processing tools"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://sox.sourceforge.net/"
 license=('GPL2' 'LGPL2.1')
 depends=('libltdl' 'file' 'libsndfile' 'libpng' 'lame' 'opencore-amr' 'gsm')
