* add movit to riscv64

--- a/movit/PKGBUILD
+++ b/movit/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=movit
 pkgver=1.6.3
 pkgrel=2
 pkgdesc="The modern video toolkit"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://movit.sesse.net/"
 license=('GPL')
 depends=('fftw' 'libepoxy')
