* add libebur128 to riscv64

--- a/libebur128/PKGBUILD
+++ b/libebur128/PKGBUILD
@@ -7,6 +7,7 @@ pkgver=1.2.6
 pkgrel=1
 pkgdesc="A library that implements the EBU R 128 standard for loudness normalisation."
 arch=(x86_64 powerpc64le)
+arch=(powerpc riscv64)
 url="https://github.com/jiixyj/libebur128"
 license=(MIT)
 depends=(glibc)
