* update kdenlive to 21.12.1-1

--- a/kde/kdenlive/PKGBUILD
+++ b/kde/kdenlive/PKGBUILD
@@ -9,7 +9,7 @@ pkgname=kdenlive
 pkgver=21.12.1
 pkgrel=1
 pkgdesc='A non-linear video editor for Linux using the MLT video framework'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/kdenlive/'
 license=(GPL)
 groups=(kde-applications kde-multimedia)
