* update kgeography to 21.12.3-1

--- a/kde/kgeography/PKGBUILD
+++ b/kde/kgeography/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kgeography
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Geography Trainer'
 url='https://apps.kde.org/kgeography/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-education)
 depends=(kxmlgui hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools python)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('bde2bce922361589d27c44b506e3f1d118d2e608f9ac0b4d9917a9f747233dbb'
+sha256sums=('8062ccc3e1d864fb923e6587e902f5b16561bed49328722c71154eec9cf33de8'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
