* add phonon-vlc to riscv64

--- a/kde/phonon-vlc/PKGBUILD
+++ b/kde/phonon-vlc/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=(phonon-qt5-vlc)
 pkgdesc="Phonon VLC backend for Qt5"
 pkgver=0.11.3
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Phonon'
 license=(LGPL)
 depends=(vlc phonon-qt5)
