* update khtml to 5.92.0-1

--- a/kde/khtml/PKGBUILD
+++ b/kde/khtml/PKGBUILD
@@ -8,6 +8,7 @@ pkgver=5.92.0
 pkgrel=1
 pkgdesc='KHTML APIs'
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(giflib kparts kjs phonon-qt5)
