* update kmail to 21.12.3-2

--- a/kde/kmail/PKGBUILD
+++ b/kde/kmail/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=kmail
-pkgver=21.12.1
-pkgrel=1
+pkgver=21.12.3
+pkgrel=2
 pkgdesc='KDE mail client'
 arch=(x86_64 powerpc64le)
 url='https://apps.kde.org/kmail2/'
@@ -15,11 +15,12 @@ makedepends=(extra-cmake-modules kdoctools boost)
 optdepends=('kleopatra: mail encryption support' 'kdepim-addons: additional plugins')
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('3ddb93feb575eb430092e928f347e0b59a0a3053d40a0839d18d756a68cb9e9f'
+sha256sums=('e023a8ced8bc6ea5fe40bc30a0a803812c04ce0245f0e8a5612d42711c33d0ce'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
