* update libotr to 4.1.1-3.1

--- a/libotr/PKGBUILD
+++ b/libotr/PKGBUILD
@@ -5,16 +5,23 @@
 
 pkgname=libotr
 pkgver=4.1.1
-pkgrel=3
+pkgrel=3.1
 pkgdesc='Off-the-Record Messaging Library and Toolkit'
 url='https://otr.cypherpunks.ca/'
 license=('GPL' 'LGPL')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('libgcrypt')
 validpgpkeys=('22DF3305DF56667CE15784FCF24DE08F42C2ABAD') # OTR Dev Team
-source=(https://otr.cypherpunks.ca/${pkgname}-${pkgver}.tar.gz{,.asc})
+source=(https://otr.cypherpunks.ca/${pkgname}-${pkgver}.tar.gz{,.asc}
+	libotr-4.1.1-fix-build-with-libgcrypt-1.10.patch)
 sha256sums=('8b3b182424251067a952fb4e6c7b95a21e644fbb27fbd5f8af2b2ed87ca419f5'
-            'SKIP')
+            'SKIP'
+            'fcde61a6155670d650d3e13b783d53d4ff5cabcc1c2051aa56df3cf240f1cd13')
+
+prepare() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i ${srcdir}/libotr-4.1.1-fix-build-with-libgcrypt-1.10.patch
+} 
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
