* update marble to 21.12.3-1

--- a/kde/marble/PKGBUILD
+++ b/kde/marble/PKGBUILD
@@ -7,20 +7,23 @@
 
 pkgbase=marble
 pkgname=(marble-common marble-qt marble-maps marble)
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Desktop Globe'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/marble/'
 license=(GPL)
 makedepends=(extra-cmake-modules gpsd kdoctools knewstuff kparts krunner libwlocate phonon-qt5
-             plasma-workspace qt5-serialport qt5-tools qt5-webengine shapelib protobuf)
+             plasma-workspace qt5-serialport qt5-tools shapelib protobuf)
+makedepends_powerpc64le=(qt5-webengine)
+makedepends_x86_86=(qt5-webengine)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgbase-$pkgver.tar.xz{,.sig})
-sha256sums=('568b6d9ab39683f6a2ca4ea78daaf4ca66db7eb13ca587333f54291e17831c49'
+sha256sums=('442925b9024c0d7d470aa1523b0647c8fdce9ce69a0a2c6b29133d43596ad86c'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgbase-$pkgver \
