* update chmlib to 0.40-6.1

--- a/chmlib/PKGBUILD
+++ b/chmlib/PKGBUILD
@@ -5,20 +5,20 @@
 
 pkgname=chmlib
 pkgver=0.40
-pkgrel=6
+pkgrel=6.1
 pkgdesc="Library for dealing with Microsoft ITSS/CHM format files"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.jedrea.com/chmlib/"
 license=('LGPL')
 depends=('glibc')
 source=("http://www.jedrea.com/chmlib/chmlib-0.40.tar.bz2"
-        chmlib-0.40-ppc.patch)
-md5sums=('7ea49ed8c335215c1edc6fae83e6b912'
-         'd349ef4fb26ad91847073c229cbd6936')
+        chmlib-0.40-ppc-riscv64.patch)
+sha256sums=('3449d64b0cf71578b2c7e3ddc048d4af3661f44a83941ea074a7813f3a59ffa3'
+            '82adaf9482afd347ead723cf0432fb14e571422ddb3d91c74119736b2feab688')
 
 prepare() {
   cd "${srcdir}"/${pkgname}-${pkgver}
-  patch -Np1 -i ${srcdir}/chmlib-0.40-ppc.patch
+  patch -Np1 -i ${srcdir}/chmlib-0.40-ppc-riscv64.patch
 }
 
 build() {
