* update kio-gdrive to 21.12.3-1

--- a/kde/kio-gdrive/PKGBUILD
+++ b/kde/kio-gdrive/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kio-gdrive
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='KIO Slave to access Google Drive'
 url='https://apps.kde.org/kio_gdrive/'
 license=(GPL)
@@ -13,11 +13,12 @@ makedepends=(extra-cmake-modules kdoctools intltool purpose)
 optdepends=('purpose: to use the share plugin')
 groups=(kde-applications kde-network)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('468a92aff34725fa3a871b25a40a04d12892aa9cb52e504c9ca5ce70abc81405'
+sha256sums=('07c1c20ed3ec8b96691d85a408997a94a76e0a61a50b056df3e21f6cde61a32e'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver
