* add telepathy-qt for riscv64

--- a/kde/telepathy-qt/PKGBUILD
+++ b/kde/telepathy-qt/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=telepathy-qt
 pkgver=0.9.8
 pkgrel=4
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://telepathy.freedesktop.org/wiki/"
 license=(LGPL)
 pkgdesc="A library for Qt-based Telepathy clients"
