* add telepathy-logger to riscv64

--- a/kde/telepathy-logger/PKGBUILD
+++ b/kde/telepathy-logger/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=telepathy-logger
 pkgver=0.8.2
 pkgrel=7
 pkgdesc="Telepathy framework logging daemon"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://telepathy.freedesktop.org/wiki/Logger"
 license=('LGPL2.1')
 depends=('telepathy-glib' 'sqlite' 'libxml2' 'dconf')
@@ -31,7 +31,8 @@ build() {
     --enable-call \
     --disable-static \
     --disable-scrollkeeper \
-    --disable-schemas-compile
+    --disable-schemas-compile \
+    --build=${CHOST}
   make
 }
 
