* update libsignon-glib to 2.1-5

--- a/libsignon-glib/PKGBUILD
+++ b/libsignon-glib/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=libsignon-glib
 pkgver=2.1
-pkgrel=4
+pkgrel=5
 pkgdesc='GLib-based client library for applications handling account authentication through the Online Accounts Single Sign-On service'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.com/accounts-sso/libsignon-glib'
 license=(LGPL2.1)
 depends=(signond)
